Changed skip_bom in order to address tdf#150023

Double BOM (invalid XML) prevents importing some Excel 2003 XML
(Excel reads them)

c.f. https://bugs.documentfoundation.org/show_bug.cgi?id=150023

Patch modified from !151.

Signed-off-by: Kohei Yoshida <kohei.yoshida@gmail.com>